# SAS_Parser

./: .env.example  .gitignore  Architecture.md  config.json  demo_run.py  main.py  pyproject.toml
.github/workflows/: ci.yml
app_config/: __init__.py  azure.py  databricks.py  powerapps.py  sharepoint.py  vault.py
chunker/: README.md  __init__.py  _repl.py  batcher.py  chunker.py  keywords.py  metadata.py  models.py  pipeline.py  pipeline_constants.py  scanner.py
complexity/: README.md  __init__.py  analyzer.py  detectors.py  models.py  rules.py
complexity/profiles/: pyspark.json  sparksql.json
llm_client/: README.md  __init__.py  client.py
memory/: README.md  __init__.py  relevance.py  short_mem.py  store.py  summarize.py  turns.py
prompt_builder/: README.md  __init__.py  builder.py  catalog.py  doc_chunker.py  models.py  pdf_reader.py  selector.py  user_instructions.py
prompt_builder/instructions/: README.md
prompt_builder/instructions/sparksql/: constructs.md  datetime.md  examples.md  functions.md  macros.md  overview.md
scripts/: pyright_baseline.json  pyright_ratchet.py
tests/: test_app_config.py  test_auth_chain.py  test_azure.py  test_backend_contract.py  test_batcher.py  test_chunker.py  test_complexity.py  test_databricks.py  test_demo_run.py  test_function_detection.py  test_library_handling.py  test_llm_client.py  test_macro_body_resolution.py  test_macro_classification.py  test_macro_suite.py  test_macro_var_flow.py  test_multifile.py  test_pipeline.py  test_pipeline_guidance.py  test_powerapps.py  test_prompt_builder_builder.py  test_prompt_builder_catalog.py  test_prompt_builder_chunker.py  test_prompt_builder_documents.py  test_prompt_builder_reader.py  test_prompt_builder_real_corpus.py  test_prompt_builder_selector.py  test_relevance.py  test_report_pdf.py  test_sharepoint.py  test_short_mem.py  test_store.py  test_summarize.py  test_user_instructions.py  test_validation.py  test_vault.py
validation/: README.md  __init__.py  __main__.py  conversation.py  dataset.py  evaluator.py  judge.py  live.py  metrics.py  models.py  pdf.py  runner.py  tracking.py
validation/cases/: macro_flow.json  simple_etl.json
