[project]
name = "sas-parser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.3.11",
    "pydantic>=2.13.4",
    "pyspark>=4.1.2",
    "regex>=2026.6.28",
]

[project.optional-dependencies]
anthropic = ["langchain-anthropic>=0.3"]
openai    = ["langchain-openai>=0.2"]
dev       = ["pytest>=8", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["."]
include = ["chunker*"]
