[project]
name = "sas-parser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bm25>=0.3.9",
    "faiss-cpu>=1.14.3",
    "langchain>=1.3.11",
    "langgraph>=1.0",
    "pydantic>=2.13.4",
    "pymupdf>=1.28.0",
    "pyspark>=4.1.2",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
anthropic = ["langchain-anthropic>=0.3"]
openai    = ["langchain-openai>=0.2"]
vault     = ["hvac>=2.0"]
dev       = ["pytest>=8", "pytest-cov", "ruff"]

[tool.setuptools.packages.find]
where = ["."]
# chunker/pipeline.py imports memory.short_mem, llm_client, and prompt_builder,
# so all four packages must ship — a wheel with chunker alone breaks
# `from chunker import SasLLMPipeline`. app_config is the dependency-free
# config loader they all read defaults through.
include = ["chunker*", "memory*", "llm_client*", "prompt_builder*", "app_config*"]

[tool.coverage.run]
# Bare `--cov` (as CI passes it) measures exactly these packages; without this
# it would measure everything imported, tests included, inflating the total.
source = [
    "chunker",
    "memory",
    "llm_client",
    "prompt_builder",
    "app_config",
    "validation",
]

[tool.pytest.ini_options]
markers = [
    "slow: end-to-end tests over the real reference_docs corpus; skipped when the PDFs are absent",
]
