[project]
name = "sas-parser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # The code imports bm25s; [core] keeps its fast backend without the
    # wrapper package's CLI extras (rich, ...).
    "bm25s[core]>=0.3.9",
    "faiss-cpu>=1.14.3",
    "langchain>=1.3.11",
    "langgraph>=1.0",
    "markdown-it-py>=3.0",
    "pydantic>=2.13.4",
    "pymupdf>=1.28.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
# Delta memory backend + validation tracking (Spark/JVM). The default
# in-memory mode must import and run without pyspark (Architecture.md
# invariant 6), so it is an extra, not a core dependency.
spark      = ["pyspark>=4.1.2"]
anthropic  = ["langchain-anthropic>=0.3"]
openai     = ["langchain-openai>=0.2"]
vault      = ["hvac>=2.0"]
azure      = ["msal>=1.28"]
databricks = ["databricks-sdk>=0.30", "databricks-sql-connector>=3.0"]
# SharePoint over Microsoft Graph. msal comes along because auth is delegated to
# app_config.azure (which mints the Graph token); msgraph-sdk pulls in
# azure-identity, the kiota runtime, and httpx itself.
sharepoint = ["msgraph-sdk>=1.5", "msal>=1.28"]
dev        = ["pytest>=8", "pytest-cov", "ruff"]

[tool.setuptools.packages.find]
where = ["."]
# chunker/pipeline.py imports memory.short_mem, llm_client, and prompt_builder,
# so all four packages must ship — a wheel with chunker alone breaks
# `from chunker import SasLLMPipeline`. app_config is the dependency-free
# config loader they all read defaults through.
include = ["chunker*", "memory*", "llm_client*", "prompt_builder*", "app_config*"]

[tool.coverage.run]
# Bare `--cov` (as CI passes it) measures exactly these packages; without this
# it would measure everything imported, tests included, inflating the total.
source = [
    "chunker",
    "memory",
    "llm_client",
    "prompt_builder",
    "app_config",
    "validation",
]

[tool.pytest.ini_options]
markers = [
    "slow: end-to-end tests over the real reference_docs corpus; skipped when the PDFs are absent",
]

[tool.pyright]
# Shipped code only. tests/ is deliberately out of the gate (see
# scripts/pyright_ratchet.py); build/ is a gitignored stale wheel tree.
include = [
    "app_config",
    "chunker",
    "memory",
    "llm_client",
    "prompt_builder",
    "validation",
    "main.py",
    "demo_run.py",
]
exclude = ["**/build/**", "**/.venv/**", "**/__pycache__/**"]
# Resolve the same interpreter and installed packages CI uses (uv's .venv),
# so optional deps (msal, hvac, delta, ...) don't read as missing imports.
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"
typeCheckingMode = "standard"
